fix for inputs on tablet

--- a/style.css
+++ b/style.css
@@ -482,6 +482,11 @@ main {
     .left-side {
         padding-right: 0;
     }
+    .field-group {
+        flex-direction: column;
+        padding-right: 0;
+        padding-top: 0;
+    }
     .field-input {
         width: 95vw;
     }
